Link to Assignment 4

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>My test page</title>
   </head>
   <body>
+    <div class="navigation">
+      <ul>
+        <a href="/Assignment4/fancifymytext.html"> Assignment 4</a>
+      </ul>
+    </div>
     <h1>Skateboarding</h1>
     <p>
       I didn't know this until today, but
